--- a/wp-content/themes/slsc/pattern-lab/source/_patterns/03-components/00-cms-styles/swiper/_swiper-custom.scss
+++ b/wp-content/themes/slsc/pattern-lab/source/_patterns/03-components/00-cms-styles/swiper/_swiper-custom.scss
@@ -53,6 +53,7 @@
   }
   @include breakpoint($bp-medium) {
     max-height:400px;
+    overflow: hidden;
   }
   &::before {
     content: '';
